[package]
name = "wasm-gen"
description = "Generates Wasm modules"
repository = "https://github.com/xtuc/wasm-gen"
version = "0.1.1"
authors = ["Sven Sauleau <sven@sauleau.com>"]
edition = "2018"
license = "MIT"
readme = "./README.md"
keywords = ["WebAssembly", "gen", "generate", "wasm", "module"]

[dependencies]
leb128 = "0.2.4"
byteorder = { version = "0.5", default-features = false }
